[metadata]
# V.EswarChand:
name = Graphics_algos
version = 1.0.0
author = V.EswarChand
author_email = chandu71202@gmail.com
description = A simple package which gives returns the values of the Computer Graphics Algorithms. Such as Bresenhen Line Drawing Algorithm etc.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chandu71202/Graphics_algos
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
